@@ -78,6 +78,8 @@ public class MigrationManager implements IEndpointStateChangeSubscriber
 
     public void onDead(InetAddress endpoint, EndpointState state) { }
 
+    public void onRestart(InetAddress endpoint, EndpointState state) { }
+
     public void onRemove(InetAddress endpoint) { }
     
     /** 
