@@ -197,6 +197,8 @@ public class StorageLoadBalancer implements IEndpointStateChangeSubscriber
 
     public void onDead(InetAddress endpoint, EndpointState state) {}
 
+    public void onRestart(InetAddress endpoint, EndpointState state) { }
+
     public void onRemove(InetAddress endpoint) {}
 
 /*
